@@ -88,7 +88,7 @@ import os                                      # don't remove
 
 # HOSTNAME = "domain.dom" 
 
-# LOGFILE = os.path.expanduser("~/tmda.log")
+# LOGFILE_INCOMING = os.path.expanduser("~/tmda_incoming.log")
 
 # MESSAGE_FROM_STYLE = "angles"
 
